--- a/lang/wpupostmetas-fr_FR.po
+++ b/lang/wpupostmetas-fr_FR.po
@@ -9,20 +9,28 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.3\n"
+"X-Generator: Poedit 1.6.5\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: ../.\n"
 
-#: .././wpupostmetas.php:147
+#: .././wpupostmetas.php:201
 msgid "None"
 msgstr "Aucun"
 
-#: .././wpupostmetas.php:159
+#: .././wpupostmetas.php:212
 msgid "No attachments"
 msgstr "Aucune pièce jointe"
 
-#: .././wpupostmetas.php:167
+#: .././wpupostmetas.php:218
 msgid "Select a value"
 msgstr "Sélectionnez une valeur"
+
+#: .././wpupostmetas.php:378
+msgid "No"
+msgstr "Non"
+
+#: .././wpupostmetas.php:379
+msgid "Yes"
+msgstr "Oui"
